<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orangecolor"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/Login"
        android:textColor="#FFFFFF"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="148dp" />

    <EditText
        android:id="@+id/editTextTextLogin"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/desing1"
        android:ems="10"
        android:inputType="text"
        android:text="@string/Login"
        android:textColor="#050505"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck"
        tools:layout_editor_absoluteY="224dp" />

    <EditText
        android:id="@+id/editTextTextPassword1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/desing1"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck,TouchTargetSizeCheck"
        tools:layout_editor_absoluteY="363dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"
        android:background="@drawable/desing1"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck,SpeakableTextPresentCheck"
        tools:layout_editor_absoluteY="510dp" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/Password"
        android:textColor="#FFFFFF"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="294dp" />

    <TextView
        android:id="@+id/textViewMail"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/Mail"
        android:textColor="#FFFFFF"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="446dp" />

    <Button
        android:id="@+id/button"
        android:background="@drawable/desing2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/Enter"
        android:textSize="30"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>