<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EatActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView52"
            android:layout_width="0dp"
            android:layout_height="115dp"
            android:background="@color/endpanel_main"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.515"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:background="@color/endpanel_main"
            android:orientation="horizontal"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/ImageButtonHome"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:background="@color/endpanel_main"
                android:contentDescription="@string/app_name"
                android:onClick="onButtonClick"
                android:scaleType="fitCenter"
                android:src="@drawable/home"
                tools:src="@drawable/home"
                tools:srcCompat="@drawable/home" />

            <ImageButton
                android:id="@+id/imageButtonBascet"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:background="@color/endpanel_main"
                android:contentDescription="@string/app_name"
                android:onClick="onButtonClick"
                android:scaleType="fitCenter"
                android:src="@drawable/backet"
                tools:src="@drawable/backet"
                tools:srcCompat="@drawable/backet" />

            <ImageButton
                android:id="@+id/image_logout"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:background="@color/endpanel_main"
                android:contentDescription="@string/app_name"
                android:onClick="lgbt"
                android:scaleType="fitCenter"
                android:src="@drawable/imageenter"
                tools:src="@drawable/imageenter"
                tools:srcCompat="@drawable/imageenter" />
        </LinearLayout>

        <TextView
            android:id="@+id/Eat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Еда"
            android:textSize="40sp"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="@+id/imageView52"
            app:layout_constraintEnd_toEndOf="@+id/imageView52"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView52" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="428dp"
        android:layout_height="491dp"
        android:layout_marginTop="122dp"
        android:layout_marginBottom="110dp"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button_merchendise"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@android:color/transparent"
                    android:onClick="onPancakesButtonClick"
                    android:text="@string/pancakes"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:visibility="visible"
                    app:cornerRadius="0dp" />

                <ImageView
                    android:id="@+id/image_pancakes"
                    android:layout_width="109dp"
                    android:layout_height="89dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/pancakes" />


            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button_coffe"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@android:color/transparent"
                    android:onClick="onFritterButtonClick"
                    android:text="@string/fritter"
                    android:visibility="visible"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    app:cornerRadius="0dp" />

                <ImageView
                    android:id="@+id/image_fritter"
                    android:layout_width="110dp"
                    android:layout_height="91dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/fritter"
                    android:visibility="visible" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button_coffe_at_home"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@android:color/transparent"
                    android:onClick="onSandwichesButtonClick"
                    android:text="@string/sandwich"
                    android:visibility="visible"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    app:cornerRadius="0dp" />

                <ImageView
                    android:id="@+id/image_sandwich"
                    android:layout_width="110dp"
                    android:layout_height="91dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/sandwich"
                    android:visibility="visible" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button_eat"
                    android:layout_width="412dp"
                    android:layout_height="90dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@android:color/transparent"
                    android:onClick="onOmeletButtonClick"
                    android:text="@string/omlet"
                    android:textColor="#000000"

                    android:textSize="20sp"
                    app:cornerRadius="0dp" />

                <ImageView
                    android:id="@+id/image_omlet"
                    android:layout_width="110dp"
                    android:layout_height="90dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/omlet"
                    android:visibility="visible" />
            </FrameLayout>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>